# vision

./: .gitignore  LICENSE  README.md
docker/: Dockerfile_vision  compose-dev_vision.yaml
ros2_ws/src/vision_detector/config/: bag_yolo_detector.params.yaml  camera_yolo_detector.params.yaml
ros2_ws/src/vision_detector/launch/: bag_yolo_detector.launch.py
ros2_ws/src/vision_detector/vision_detector/: bag_detection_node.py  bag_reader.py  camera_detection_node.py  config.py  debug_utils.py  depth_utils.py  message_utils.py
vision_bag_detector/: package.xml  setup.cfg  setup.py
vision_bag_detector/config/: bag_yolo_detector.params.yaml  camera_yolo_detector.params.yaml
vision_bag_detector/launch/: bag_yolo_detector.launch.py  from_camera_full_pipeline.launch.py
vision_bag_detector/vision_bag_detector/: __init__.py  bag_detection_node.py  bag_reader.py  camera_detection_node.py  config.py  debug_utils.py  depth_utils.py  message_utils.py  yolo_detector.py
vision_detector/: package.xml  setup.cfg  setup.py
vision_detector/config/: bag_yolo_detector.params.yaml
vision_detector/launch/: bag_yolo_detector.launch.py  from_camera_full_pipeline.launch.py
vision_detector/vision_detector/: __init__.py  config.py  image_utils.py  yolo_detector.py
