<?xml version="1.0"?>
<package format="3">
  <name>vision_bag_detector</name>
  <version>0.1.0</version>
  <description>ROS 2 Python package for reading bagged RealSense image streams, running YOLO inference, and publishing detections.</description>
  <maintainer email="dev@example.com">Vision Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
